--- a/src/components/styles/Leaderboard.css
+++ b/src/components/styles/Leaderboard.css
@@ -5,6 +5,7 @@
     background-color: #f1f1f1;
     padding: 32px;
     border-radius: 8px;
+    position: relative;
 }
 
 .title {
@@ -48,4 +49,10 @@
     font-size: 24px;
     font-weight: bold;
     color: #222222;
+}
+
+.go-home-btn {
+    position: absolute;
+    top: 2rem;
+    left: 3rem;
 }
