--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
 .App {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .welcome-page {
@@ -70,13 +74,20 @@
 .main {
     width: 1920px;
     height: 1080px;
-    /* width: 100px; */
 }
 
 .gallery {
     display: flex;
-    /* flex-direction: column; */
-    gap: 1rem;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-around;
+
+}
+
+.gallery-mainimage-wrapper {
+    display: flex;
+    gap: 3rem;
+    align-items: center;
 }
 
 .characterImage {
