--- a/src/components/styles/Popup.css
+++ b/src/components/styles/Popup.css
@@ -7,37 +7,38 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     background-color: #fff;
     border: 1px solid #ccc;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     padding: 10px;
     z-index: 50;
+    gap: 2px;
+
 }
 
 .popup button {
-    margin: 5px;
-    padding: 10px;
+    padding: 5px;
     border: none;
     border-radius: 5px;
     background-color: #0077cc;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
+    font-weight: bold;
+
 }
 
 .popup button:hover {
     background-color: #005fa3;
 }
 
-.close-button {
-    position: absolute;
+#close-button {
+    /* position: absolute; */
     top: 0;
     right: 0;
-    margin: 5px;
-    padding: 5px;
+
     border: none;
-    background-color: #ccc;
+    background-color: #f61212;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
