--- a/src/components/styles/Leaderboard.css
+++ b/src/components/styles/Leaderboard.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     align-items: center;
     background-color: #f1f1f1;
-    padding: 32px;
     border-radius: 8px;
     position: relative;
+    height: 100vh;
 }
 
 .title {
