--- a/src/App.css
+++ b/src/App.css
@@ -21,26 +21,34 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     height: 100vh;
     background-color: #f1f1f1;
-    gap: 0.5rem;
+    padding: 3rem;
+    box-sizing: border-box;
+    gap: 2rem;
+
 }
 
-.title {
+.welcome-title {
     font-size: 48px;
     font-weight: bold;
-    margin-bottom: 32px;
     color: #222222;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+.description,
+.name-prompt {
+    font-size: 24px;
+    line-height: 1.5;
+    /* margin-bottom: 64px; */
+    color: #444444;
     text-align: center;
 }
 
-.description {
-    font-size: 24px;
-    line-height: 1.5;
-    margin-bottom: 64px;
-    color: #444444;
-    text-align: center;
+.player-name-input {
+    font-size: 40px;
+    /* text-align: center; */
 }
 
 .start-game-button,
@@ -98,6 +106,8 @@
     flex-direction: column;
     height: 100%;
     justify-content: space-around;
+    align-items: center;
+    gap: 1rem;
 
 }
 
@@ -132,7 +142,6 @@
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     background-color: #f1f1f1;
-    /* padding: 2rem; */
 }
 
 .endgame-dialog::backdrop {
