--- a/src/components/styles/Leaderboard.css
+++ b/src/components/styles/Leaderboard.css
@@ -56,3 +56,13 @@
     top: 2rem;
     left: 3rem;
 }
+
+.top10 {
+    overflow-x: hidden;
+    width: 50%;
+    padding: 0px 40px;
+}
+
+.top10::-webkit-scrollbar {
+    display: none;
+}
